fix footer overlapping other content bug

--- a/src/static/css/_config.scss
+++ b/src/static/css/_config.scss
@@ -4,6 +4,13 @@
   margin: 0;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 a {
   text-decoration: none;
   color: #fff;
