--- a/src/static/css/layout/_footer.scss
+++ b/src/static/css/layout/_footer.scss
@@ -1,6 +1,4 @@
 .footer {
-  position: fixed;
-  bottom: 0rem;
   height: 50px;
   width: 100%;
   display: flex;
